--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,22 +3,24 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "1.3.6",
+    "@hot-loader/react-dom": "npm:react-dom@16.13.0",
+    "@reduxjs/toolkit": "1.5.0",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
-    "@types/react": "^17.0.0",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
-    "axios": "0.19.2",
+    "@types/react": "16.14.2",
+    "@types/react-redux": "7.1.11",
+    "@types/react-router-dom": "5.1.6",
+    "axios": "0.21.0",
     "classnames": "2.2.6",
     "node-sass": "4.14.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hot-loader": "^4.13.0",
-    "react-redux": "7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-hot-loader": "4.13.0",
+    "react-redux": "7.2.2",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.4",
+    "typescript": "4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
