--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,26 +2,6 @@
   "name": "secret-santa-client",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@hot-loader/react-dom": "npm:react-dom@16.13.0",
-    "@reduxjs/toolkit": "1.5.0",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.5.0",
-    "@testing-library/user-event": "7.2.1",
-    "@types/react": "16.14.2",
-    "@types/react-redux": "7.1.11",
-    "@types/react-router-dom": "5.1.6",
-    "axios": "0.21.0",
-    "classnames": "2.2.6",
-    "node-sass": "4.14.1",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-hot-loader": "4.13.0",
-    "react-redux": "7.2.2",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.4",
-    "typescript": "4.1.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && gzip -krf build/**/*.{ignored,html,css,js,png}",
@@ -43,9 +23,31 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "axios": "0.21.0",
+    "classnames": "2.2.6",
+    "node-sass": "4.14.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-hot-loader": "4.13.0",
+    "react-redux": "7.2.2",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.4",
+    "react-textarea-autosize": "^8.3.0",
+    "typescript": "4.1.2"
+  },
   "devDependencies": {
-    "@types/classnames": "^2.2.11",
-    "brotli": "^1.3.2",
-    "gzip-cli": "^1.1.1"
+    "@hot-loader/react-dom": "npm:react-dom@16.13.0",
+    "@reduxjs/toolkit": "1.5.0",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
+    "@types/classnames": "2.2.11",
+    "@types/react": "16.14.2",
+    "@types/react-dom": "16.9.10",
+    "@types/react-redux": "7.1.11",
+    "@types/react-router-dom": "5.1.6",
+    "brotli": "1.3.2",
+    "gzip-cli": "1.1.1"
   }
 }
