--- a/backend/package.json
+++ b/backend/package.json
@@ -18,43 +18,45 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/platform-express": "^7.5.1",
-    "@nestjs/typeorm": "^7.1.5",
-    "@types/uuid": "^8.3.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "sqlite3": "^5.0.0",
-    "typeorm": "^0.2.29",
-    "uuid": "^8.3.1"
+    "@nestjs/common": "8.0.6",
+    "@nestjs/core": "8.0.6",
+    "@nestjs/platform-express": "8.0.6",
+    "@nestjs/typeorm": "8.0.2",
+    "@types/uuid": "8.3.1",
+    "cookie-parser": "^1.4.5",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "7.3.0",
+    "sqlite3": "5.0.2",
+    "typeorm": "0.2.36",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
-    "@types/sqlite3": "^3.1.6",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.3",
-    "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "@nestjs/cli": "8.1.1",
+    "@nestjs/schematics": "8.0.2",
+    "@nestjs/testing": "8.0.6",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "4.17.13",
+    "@types/jest": "26.0.24",
+    "@types/node": "16.4.13",
+    "@types/sqlite3": "3.1.7",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "4.29.0",
+    "@typescript-eslint/parser": "4.29.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "jest": "27.0.6",
+    "prettier": "2.3.2",
+    "supertest": "6.1.4",
+    "ts-jest": "27.0.4",
+    "ts-loader": "9.2.5",
+    "ts-node": "10.1.0",
+    "tsconfig-paths": "3.10.1",
+    "typescript": "4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
