--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -38,7 +38,7 @@ jobs:
         id: node_modules-cache
         uses: actions/cache@v2
         with:
-          path: /node_modules
+          path: ./node_modules
           key: node_modules
 
       - name: 'install app'
