fix: test caches [run]

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,12 +45,12 @@ jobs:
           fetch-depth: 0
 
       - name: 'Setup environment variables'
-        if: "!contains(needs.pre_ci.outputs.commit_message, '[skip]')"
+        if: "contains(needs.pre_ci.outputs.commit_message, '[run]')"
         run: |
           echo "COMMIT_MSG_BASH=$(git log -1 --pretty="%s")" >> $GITHUB_ENV
 
       - name: 'Show environment variables'
-        if: "!contains(needs.pre_ci.outputs.commit_message, '[skip]')"
+        if: "contains(needs.pre_ci.outputs.commit_message, '[run]')"
         run: |
           echo ${{github.event.head_commit.message}}
           echo ${{env.COMMIT_MSG_BASH}}
