--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build android app, run tests, upload apk to Firebase and SDK to S3
+    needs: pre_ci
     steps:
 
       - name: 'checkout'
