--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ env:
   COMMIT_MSG: ${{ github.event.head_commit.message }}
 
 jobs:
-  initialise:
+  pre_ci:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Project
