--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "@types/jest": "26.0.24",
     "@types/node": "16.4.13",
     "@types/passport-jwt": "3.0.6",
+    "@types/passport-local": "1.0.34",
     "@types/sqlite3": "3.1.7",
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "4.29.0",
