--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,30 +24,32 @@
     ]
   },
   "dependencies": {
-    "axios": "0.21.0",
-    "classnames": "2.2.6",
-    "node-sass": "4.14.1",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "axios": "0.21.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "classnames": "2.3.1",
+    "node-sass": "6.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
-    "react-redux": "7.2.2",
+    "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.4",
-    "react-textarea-autosize": "^8.3.0",
-    "typescript": "4.1.2"
+    "react-scripts": "4.0.3",
+    "react-textarea-autosize": "8.3.3",
+    "typescript": "4.3.5"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "npm:react-dom@16.13.0",
-    "@reduxjs/toolkit": "1.5.0",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.5.0",
-    "@testing-library/user-event": "7.2.1",
-    "@types/classnames": "2.2.11",
-    "@types/react": "16.14.2",
-    "@types/react-dom": "16.9.10",
-    "@types/react-redux": "7.1.11",
-    "@types/react-router-dom": "5.1.6",
+    "@hot-loader/react-dom": "npm:react-dom@17.0.2",
+    "@reduxjs/toolkit": "1.6.1",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.0.0",
+    "@testing-library/user-event": "13.2.1",
+    "@types/classnames": "2.3.1",
+    "@types/react": "17.0.17",
+    "@types/react-dom": "17.0.9",
+    "@types/react-redux": "7.1.18",
+    "@types/react-router-dom": "5.1.8",
     "brotli": "1.3.2",
-    "gzip-cli": "1.1.1"
+    "gzip-cli": "1.2.0"
   }
 }
