--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,10 +28,12 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "classnames": "2.3.1",
+    "i18next": "^21.1.0",
     "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
+    "react-i18next": "^11.12.0",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
