feat: separate new project for model

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@types/uuid": "8.3.1",
     "bcrypt": "5.0.1",
     "cookie-parser": "1.4.5",
+    "model": "file:../model",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
