--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "class-validator": "^0.13.1",
     "classnames": "2.3.1",
     "i18next": "^21.1.0",
+    "model": "file:../model",
     "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
