--- a/backend/package.json
+++ b/backend/package.json
@@ -23,13 +23,15 @@
   "dependencies": {
     "@nestjs/common": "8.0.6",
     "@nestjs/core": "8.0.6",
-    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "8.0.6",
+    "@nestjs/serve-static": "2.2.2",
     "@nestjs/typeorm": "8.0.2",
     "@types/uuid": "8.3.1",
     "bcrypt": "5.0.1",
     "cookie-parser": "1.4.5",
+    "express-static-gzip": "2.1.1",
     "model": "file:../model",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
