--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Намек понял",
-  "name": "Намек понял",
+  "short_name": "Тайный санта",
+  "name": "Тайный санта",
   "icons": [
     {
       "src": "favicon.png",
