--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#4c191b",
+  "background_color": "#006f57"
 }
