--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "test": "react-scripts test",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "gzip": "gzip -krf build/**/*.{ignored,html,css,js,png}",
-    "brotli": "brotli -kf build/**/*.{ignored,html,css,js,png}",
+    "brotli": "brotli -kf build/**/*.{ignored,html,css,js,png}"
   },
   "proxy": "http://localhost:8081",
   "eslintConfig": {
