--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,9 @@
     "axios": "0.21.1",
     "classnames": "2.3.1",
     "i18next": "21.1.0",
+    "loadable-data": "^1.0.0",
     "model": "file:../model",
-    "node-sass": "6.0.1",
+    "node-sass": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
